--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "andrewsville/php-token-reflection": "~1.4"
     },
     "suggest": {
-        "bartlett/php-reflect": "Reverse-engine compatible solution 1"
+        "bartlett/php-reflect": "Reverse-engine compatible solution 1",
         "andrewsville/php-token-reflection": "Reverse-engine compatible solution 2"
     },
     "authors": [
