--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "bartlett/umlwriter",
     "description": "Create UML class diagrams from your PHP source.",
+    "keywords": ["UML", "Graphviz", "PlantUML"],
     "type": "library",
     "license": "BSD-3-Clause",
     "homepage": "http://php5.laurent-laville.org/umlwriter/",
