upgrade to psr-4

--- a/composer.json
+++ b/composer.json
@@ -34,12 +34,12 @@
         "bin/umlwriter"
     ],
     "autoload": {
-        "psr-0": {
-            "Bartlett\\": "src/"
+        "psr-4": {
+            "Bartlett\\": "src/Bartlett"
         }
     },
     "autoload-dev": {
-        "psr-0": {
+        "psr-4": {
             "Bartlett\\Tests\\UmlWriter\\": "tests/"
         }
     }
