prepare stable release 1.1

--- a/docs/bootstrap3.conf
+++ b/docs/bootstrap3.conf
@@ -1,10 +1,19 @@
 [attributes]
+linkcss
+numbered!
+tocmmenu
+toclevels=2
+lang=en
+jumbotron
+jumbotron-fullwidth
 totop
+stylesheet=tocmmenu.css
+iconsfont=font-awesome
 themeswitcher
 themeswitcher-cookiethemename=umlwriter.bootstrapTheme.name
 themeswitcher-cookiethemecss=umlwriter.bootstrapTheme.css
 themeswitcher-cookiepath=/umlwriter/manual
 navbar=fixed
 theme=united
-stylesheet=tocaffix.css
-tocaffix=80
+footer
+footer-fullwidth
