--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     },
     "require": {
         "php": ">=5.4.0",
-        "symfony/console": "~2.5",
+        "symfony/console": "~2.5|~3.0",
         "sebastian/version": "~1.0|~2.0"
     },
     "require-dev": {
