--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,13 @@
         "issues": "https://github.com/llaville/umlwriter/issues"
     },
     "require": {
-        "php": ">=5.4.0",
-        "symfony/console": "~2.5|~3.0",
-        "sebastian/version": "~1.0|~2.0"
+        "php": "^5.4|^7.0",
+        "symfony/console": "^2.5|^3.0",
+        "sebastian/version": "^1.0|^2.0"
     },
     "require-dev": {
-        "bartlett/php-reflect": "~4.0",
-        "andrewsville/php-token-reflection": "~1.4"
+        "bartlett/php-reflect": "^4.0",
+        "andrewsville/php-token-reflection": "^1.4"
     },
     "suggest": {
         "bartlett/php-reflect": "Reverse-engine, default solution",
