--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "sebastian/version": "^1.0|^2.0"
     },
     "require-dev": {
-        "bartlett/php-reflect": "4.3.x-dev",
+        "bartlett/php-reflect": "^4.3",
         "andrewsville/php-token-reflection": "^1.4"
     },
     "suggest": {
