--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,19 @@
     },
     "require": {
         "php": "^7.1.3",
-        "bartlett/graph-uml": "^0.4",
+        "bartlett/graph-uml": "^0.6",
         "goaop/parser-reflection": "^2.1",
         "graphp/graph": "dev-master as 1.0.0",
-        "graphp/graphviz": "dev-master as 1.0.0",
+        "graphp/graphviz": "dev-subgraph_cluster_attributes as 1.0.0",
         "symfony/console": "^4.4|^5.0",
         "symfony/finder": "^4.4|^5.0"
     },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/llaville/graphviz"
+        }
+    ],
     "authors": [
         {
             "name": "Laurent Laville",
