--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,11 @@
         "graphp/graph": "dev-master as 1.0.0",
         "graphp/graphviz": "dev-subgraph_cluster_attributes as 1.0.0",
         "psr/container": "^1.0",
+        "symfony/config": "^4.4|^5.0",
         "symfony/console": "^4.4|^5.0",
-        "symfony/finder": "^4.4|^5.0"
+        "symfony/finder": "^4.4|^5.0",
+        "symfony/options-resolver": "^4.4|^5.0",
+        "symfony/yaml": "^4.4|^5.0"
     },
     "require-dev": {
         "jawira/plantuml": "^1.28"
