--- a/.editorconfig
+++ b/.editorconfig
@@ -17,3 +17,9 @@ end_of_line = crlf
 # PHP should follow the PSR-2 standard
 [*.php]
 indent_size = 4
+
+[*.gv]
+trim_trailing_whitespace = false
+
+[*.puml]
+trim_trailing_whitespace = false
