--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     },
     "require": {
         "php": "^7.1.3",
-        "bartlett/graph-plantuml-generator": "dev-master",
+        "bartlett/graph-plantuml-generator": "1.0.0-beta.1",
         "bartlett/graph-uml": "1.0.0-beta.2",
         "goaop/parser-reflection": "^2.1",
         "graphp/graph": "dev-master as 1.0.0",
