replace PNG application image by a SVG version

--- a/docs/config.json
+++ b/docs/config.json
@@ -1,7 +1,7 @@
 {
     "title": "UmlWriter",
     "tagline": "Create UML diagrams from your PHP source",
-    "image": "app.png",
+    "image": "app.svg",
     "html": {
         "theme": "daux-navy",
         "auto_toc": false,
