update box (phar distrib) compilation

--- a/box.json.dist
+++ b/box.json.dist
@@ -1,77 +1,5 @@
 {
-    "directories": ["src"],
-    "compression": "GZ",
-    "dump-autoload": false,
-    "files": [
-        "manifest.txt",
-        "LICENSE",
-        "vendor/bartlett/graph-plantuml-generator/LICENSE",
-        "vendor/bartlett/graph-uml/LICENSE",
-        "vendor/goaop/parser-reflection/LICENSE",
-        "vendor/graphp/graph/LICENSE",
-        "vendor/graphp/graphviz/LICENSE",
-        "vendor/jawira/plantuml/LICENSE.md",
-        "vendor/jawira/plantuml-encoding/LICENSE.md",
-        "vendor/nikic/php-parser/LICENSE",
-        "vendor/psr/container/LICENSE",
-        "vendor/symfony/config/LICENSE",
-        "vendor/symfony/console/LICENSE",
-        "vendor/symfony/filesystem/LICENSE",
-        "vendor/symfony/finder/LICENSE",
-        "vendor/symfony/options-resolver/LICENSE",
-        "vendor/symfony/polyfill-ctype/LICENSE",
-        "vendor/symfony/polyfill-mbstring/LICENSE",
-        "vendor/symfony/polyfill-php73/LICENSE",
-        "vendor/symfony/service-contracts/LICENSE",
-        "vendor/symfony/yaml/LICENSE",
-        "vendor/autoload.php"
-    ],
-    "finder": [
-        {
-            "name": "*.php",
-            "in": "vendor/composer"
-        },
-        {
-            "name": "*.php",
-            "in": "vendor/bartlett/graph-plantuml-generator/src"
-        },
-        {
-            "name": "*.php",
-            "in": "vendor/bartlett/graph-uml/src"
-        },
-        {
-            "name": "*.php",
-            "in": "vendor/goaop/parser-reflection/src"
-        },
-        {
-            "name": "*.php",
-            "in": "vendor/graphp/graph/src"
-        },
-        {
-            "name": "*.php",
-            "in": "vendor/graphp/graphviz/src"
-        },
-        {
-            "name": "*.*",
-            "in": "vendor/jawira/plantuml/bin"
-        },
-        {
-            "name": "*.php",
-            "in": "vendor/jawira/plantuml-encoding/src"
-        },
-        {
-            "name": "*.php",
-            "in": "vendor/nikic/php-parser/lib"
-        },
-        {
-            "name": "*.php",
-            "in": "vendor/psr/container/src"
-        },
-        {
-            "name": "*.php",
-            "notPath": "/Tests/",
-            "in": "vendor/symfony"
-        }
-    ],
-    "stub": "phar-stub.php"
+    "alias": "umlwriter.phar",
+    "directories": ["bin", "src", "vendor"],
+    "compression": "GZ"
 }
