--- a/composer.json
+++ b/composer.json
@@ -10,14 +10,14 @@
         "issues": "https://github.com/llaville/umlwriter/issues"
     },
     "require": {
-        "php": "^7.1.3",
+        "php": "^8.0",
         "bartlett/graph-plantuml-generator": "^1.0",
         "bartlett/graph-uml": "^1.0",
         "cweagans/composer-patches": "^1.7",
         "graphp/graph": "dev-master as 1.0.0",
         "graphp/graphviz": "dev-master as 1.0.0",
         "psr/container": "^1.0",
-        "roave/better-reflection": "^4.12",
+        "roave/better-reflection": "5.0.x-dev",
         "symfony/config": "^4.4|^5.0",
         "symfony/console": "^4.4|^5.0",
         "symfony/finder": "^4.4|^5.0",
@@ -30,7 +30,6 @@
     "authors": [
         {
             "name": "Laurent Laville",
-            "email": "pear@laurent-laville.org",
             "homepage": "https://github.com/llaville",
             "role": "Lead"
         }
