cancel any currently running job or workflow in the same concurrency group

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -5,9 +5,14 @@ on:
     push:
         branches:
             - master
+            - 3.x
         paths:
             - docs/**
     pull_request:
+
+concurrency:
+    group: ${{ github.ref }}-${{ github.workflow }}
+    cancel-in-progress: true
 
 jobs:
     deploy:
