--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -59,6 +59,7 @@ jobs:
                 run: |
                     php examples/graphviz.php docs
                     php examples/public-architecture/graphviz.php docs/03_Cookbook
+                    php examples/public-methods/graphviz.php docs/03_Cookbook
                     php examples/custom-autoloader.php docs/03_Cookbook
 
             -   # Create commits
