--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -58,6 +58,7 @@ jobs:
                 name: Update Diagrams
                 run: |
                     php examples/graphviz.php docs
+                    php examples/cli-architecture/graphviz.php docs/02_Console_Commands
                     php examples/public-architecture/graphviz.php docs/03_Cookbook
                     php examples/public-methods/graphviz.php docs/03_Cookbook
                     php examples/custom-autoloader.php docs/03_Cookbook
