--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -59,6 +59,7 @@ jobs:
                 run: |
                     php examples/graphviz.php docs
                     php examples/configuration/graphviz.php docs/01_Features
+                    php examples/services/graphviz.php docs/01_Features
                     php examples/cli-architecture/graphviz.php docs/02_Console_Commands
                     php examples/public-architecture/graphviz.php docs/03_Cookbook
                     php examples/public-methods/graphviz.php docs/03_Cookbook
