--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -9,6 +9,7 @@ on:
         paths:
             - docs/**
     pull_request:
+    workflow_dispatch:
 
 concurrency:
     group: ${{ github.ref }}-${{ github.workflow }}
@@ -97,6 +98,6 @@ jobs:
                     publish_dir: ./site
                     destination_dir: 2.x
                     full_commit_message: "Deployed ${{ github.sha }} with MkDocs"
-                    force_orphan: true
+                    force_orphan: false
                     user_name: 'github-actions'
                     user_email: 'github-actions@users.noreply.github.com'
