--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -6,9 +6,11 @@ on:
         branches:
             - master
             - 2.x
+            - 3.x
         paths:
             - docs/**
     pull_request:
+    workflow_dispatch:
 
 concurrency:
     group: ${{ github.ref }}-${{ github.workflow }}
@@ -90,12 +92,12 @@ jobs:
 
             -   # Deploy Documentation
                 name: Deploy Docs
-                if: ${{ github.ref == 'refs/heads/2.x' }}
+                if: ${{ github.ref != 'refs/heads/master' }}
                 uses: peaceiris/actions-gh-pages@v3
                 with:
                     github_token: ${{ secrets.GITHUB_TOKEN }}
                     publish_dir: ./site
-                    destination_dir: 2.x
+                    destination_dir: ${{ github.ref_name }}
                     full_commit_message: "Deployed ${{ github.sha }} with MkDocs"
                     force_orphan: true
                     user_name: 'github-actions'
