update for composer 2.2 plugins compatibility

--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,10 @@
     ],
     "config": {
         "preferred-install": "source",
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "cweagans/composer-patches": true
+        }
     },
     "autoload": {
         "psr-4": {
