allow to add a manifest to PHAR distribution (see PR 582 referenced in issue box-project/box#576)

--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "symfony/yaml": "^4.4|^5.0"
     },
     "require-dev": {
+        "composer/composer": "^2.0",
         "jawira/plantuml": "^1.28"
     },
     "authors": [
