--- a/box.json.dist
+++ b/box.json.dist
@@ -1,5 +1,6 @@
 {
     "alias": "umlwriter.phar",
     "directories": ["bin", "src", "vendor"],
-    "compression": "GZ"
+    "compression": "GZ",
+    "metadata": "box-metadata.php"
 }
