--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -59,9 +59,9 @@ jobs:
                 name: Update Diagrams
                 run: |
                     php resources/graph-uml/build.php application docs
+                    php resources/graph-uml/build.php configuration docs/01_Features
                     php resources/graph-uml/build.php console-commands docs/02_Console_Commands
                     php resources/graph-uml/build.php custom-autoloader docs/03_Cookbook
-                    php examples/configuration/graphviz.php docs/01_Features
                     php examples/services/graphviz.php docs/01_Features
                     php examples/public-architecture/graphviz.php docs/03_Cookbook
                     php examples/public-methods/graphviz.php docs/03_Cookbook
