update public architecture examples

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -64,8 +64,8 @@ jobs:
                     php resources/graph-uml/build.php console-commands docs/02_Console_Commands
                     php resources/graph-uml/build.php custom-autoloader docs/03_Cookbook
                     php resources/graph-uml/build.php public-methods-only docs/03_Cookbook
+                    php resources/graph-uml/build.php public-architecture docs/03_Cookbook
                     php resources/graph-uml/build.php generator docs/90_For_Developers
-                    php examples/public-architecture/graphviz.php docs/03_Cookbook
 
             -   # Setup Python version
                 name: Set up Python runtime
