--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,11 @@
     },
     "require": {
         "php": "^7.1.3",
-        "bartlett/graph-plantuml-generator": "^1.1",
-        "bartlett/graph-uml": "^1.1",
+        "bartlett/graph-plantuml-generator": "^1.2",
+        "bartlett/graph-uml": "^1.2",
         "cweagans/composer-patches": "^1.7",
-        "graphp/graph": "dev-master as 1.0.0",
-        "graphp/graphviz": "dev-master as 1.0.0",
+        "graphp/graph": "dev-master#04461a7 as 1.0.0",
+        "graphp/graphviz": "dev-master#5872f6b as 1.0.0",
         "psr/container": "^1.0",
         "roave/better-reflection": "^4.12",
         "symfony/config": "^4.4|^5.0",
