--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -11,85 +11,10 @@ on:
     pull_request:
     workflow_dispatch:
 
-concurrency:
-    group: ${{ github.ref }}-${{ github.workflow }}
-    cancel-in-progress: true
-
 jobs:
     deploy:
-        name: Deploy to GH Pages
-
-        runs-on: ${{ matrix.os }}
-
-        strategy:
-            fail-fast: false
-            matrix:
-                os:
-                    - ubuntu-latest
-                php:
-                    - 8.0
-
-        steps:
-            -   # Git Checkout
-                name: Checkout Code
-                uses: actions/checkout@v2
-                with:
-                    persist-credentials: false
-
-            -   # Setup Libraries
-                name: Setup Libraries
-                run: |
-                    sudo apt-get update
-                    sudo apt-fast install graphviz -y
-
-            -   # Setup PHP runtime
-                name: Setup PHP runtime
-                uses: "shivammathur/setup-php@v2"
-                with:
-                    php-version: ${{ matrix.php }}
-
-            -   # Install Composer dependencies
-                name: Install Composer dependencies
-                uses: "ramsey/composer-install@v2"
-                with:
-                    dependency-versions: "highest"
-                    composer-options: "--prefer-dist --no-scripts"
-
-            -   # Update diagrams used in documentation
-                name: Update Diagrams
-                run: |
-                    php resources/graph-uml/build.php application docs
-                    php resources/graph-uml/build.php configuration docs/01_Features
-                    php resources/graph-uml/build.php services docs/01_Features
-                    php resources/graph-uml/build.php console-commands docs/02_Console_Commands
-                    php resources/graph-uml/build.php custom-autoloader docs/03_Cookbook
-                    php resources/graph-uml/build.php public-methods-only docs/03_Cookbook
-                    php resources/graph-uml/build.php public-architecture docs/03_Cookbook
-                    php resources/graph-uml/build.php generator docs/90_For_Developers
-
-            -   # Setup Python version
-                name: Set up Python runtime
-                uses: actions/setup-python@v2
-                with:
-                    python-version: 3.x
-
-            -   # Install Material for MkDocs
-                name: Install Material for MkDocs
-                run: pip install mkdocs-material
-
-            -   # Build Documentation
-                name: Build Docs
-                run: mkdocs build
-
-            -   # Deploy Documentation
-                name: Deploy Docs
-                if: ${{ github.ref == 'refs/heads/3.x' }}
-                uses: peaceiris/actions-gh-pages@v3
-                with:
-                    github_token: ${{ secrets.GITHUB_TOKEN }}
-                    publish_dir: ./site
-                    destination_dir: 3.x
-                    full_commit_message: "Deployed ${{ github.sha }} with MkDocs"
-                    force_orphan: false
-                    user_name: 'github-actions'
-                    user_email: 'github-actions@users.noreply.github.com'
+        uses: llaville/.github/.github/workflows/gh-pages.yml@master
+        with:
+            destination-dir: 3.x
+            hook-script: "resources/gh-pages-hook.sh"
+            force-orphan: false
