--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -15,6 +15,7 @@ jobs:
     deploy:
         uses: llaville/.github/.github/workflows/gh-pages.yml@master
         with:
+            php-version: "8.0"
             destination-dir: 3.x
             hook-script: "resources/gh-pages-hook.sh"
             force-orphan: false
