use now the composer runtime api 2.0 rather than Application::VERSION constant

--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "php": "^8.0",
         "bartlett/graph-plantuml-generator": "^1.2",
         "bartlett/graph-uml": "^1.2",
+        "composer-runtime-api": "^2.0",
         "cweagans/composer-patches": "^1.7",
         "graphp/graph": "dev-master#04461a7 as 1.0.0",
         "graphp/graphviz": "dev-master#5872f6b as 1.0.0",
