add config/platform composer setting (min value is required by roave/better-reflection)

--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,9 @@
         "bin/umlwriter"
     ],
     "config": {
+        "platform": {
+            "php": "8.0.12"
+        },
         "preferred-install": "source",
         "sort-packages": true,
         "allow-plugins": {
