--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,9 +8,8 @@ on:
     workflow_dispatch:
 
 env:
-    box_alias: "umlwriter.phar"
-    box_output: "bin/${{ env.box_alias }}"
-    release_notes: "releaseNotes.md"
+    BOX_OUTPUT: bin/umlwriter.phar
+    RELEASE_NOTES: releaseNotes.md
 
 jobs:
     build:
@@ -33,8 +32,7 @@ jobs:
                 with:  # https://github.com/softprops/action-gh-release#-customizing
                     prerelease: true
                     draft: true
-                    body_path: ${{ github.workspace }}${{ env.release_notes }}
+                    body_path: ${{ github.workspace }}${{ env.RELEASE_NOTES }}
                     # https://github.com/softprops/action-gh-release#%EF%B8%8F-uploading-release-assets
                     files:
-                        ${{ env.box_output }}
-
+                        ${{ env.BOX_OUTPUT }}
