php-version parameter must be a string

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,7 @@ jobs:
                 name: Setup PHP runtime
                 uses: shivammathur/setup-php@v2
                 with:
-                    php-version: 8.0
+                    php-version: "8.0"
 
             -   # Install Composer dependencies
                 name: Install Composer dependencies
