--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
         "bartlett/graph-uml": "^1.2",
         "composer-runtime-api": "^2.0",
         "cweagans/composer-patches": "^1.7",
-        "graphp/graph": "dev-master#04461a7 as 1.0.0",
-        "graphp/graphviz": "dev-master#42a2098 as 1.0.0",
+        "graphp/graph": "1.x-dev#0adb04d as 1.0.0",
+        "graphp/graphviz": "1.x-dev#24b1994 as 1.0.0",
         "psr/container": "^1.0",
         "roave/better-reflection": "^5.0",
         "symfony/config": "^4.4 || ^5.0 || ^6.0",
