--- a/composer.json
+++ b/composer.json
@@ -12,17 +12,17 @@
     "require": {
         "php": "^7.1.3",
         "bartlett/graph-plantuml-generator": "^1.2",
-        "bartlett/graph-uml": "^1.2",
+        "bartlett/graph-uml": "^1.3",
         "cweagans/composer-patches": "^1.7",
-        "graphp/graph": "dev-master#04461a7 as 1.0.0",
-        "graphp/graphviz": "dev-master#5872f6b as 1.0.0",
+        "graphp/graph": "1.x-dev#0adb04d as 1.0.0",
+        "graphp/graphviz": "1.x-dev#24b1994 as 1.0.0",
         "psr/container": "^1.0",
         "roave/better-reflection": "^4.12",
-        "symfony/config": "^4.4|^5.0",
-        "symfony/console": "^4.4|^5.0",
-        "symfony/finder": "^4.4|^5.0",
-        "symfony/options-resolver": "^4.4|^5.0",
-        "symfony/yaml": "^4.4|^5.0"
+        "symfony/config": "^4.4 || ^5.0",
+        "symfony/console": "^4.4 || ^5.0",
+        "symfony/finder": "^4.4 || ^5.0",
+        "symfony/options-resolver": "^4.4 || ^5.0",
+        "symfony/yaml": "^4.4 || ^5.0"
     },
     "require-dev": {
         "jawira/plantuml": "^1.28"
@@ -38,8 +38,10 @@
         "bin/umlwriter"
     ],
     "config": {
-        "preferred-install": "source",
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "cweagans/composer-patches": true
+        }
     },
     "autoload": {
         "psr-4": {
