migrate from legacy script to Changie tool (build CHANGELOG automation)

--- a/.github/linters/.ecrc
+++ b/.github/linters/.ecrc
@@ -4,7 +4,7 @@
   "IgnoreDefaults": false,
   "SpacesAftertabs": false,
   "NoColor": false,
-  "Exclude": ["\\.idea", "\\.editorconfig", "\\.github", "vendor", "LICENSE", "mkdocs\\.yml", "**/*\\.gv", "**/*\\.puml"],
+  "Exclude": ["\\.idea", "\\.editorconfig", "\\.github", "vendor", "LICENSE", "mkdocs\\.yml", "**/*\\.gv", "**/*\\.puml", "\\.changes"],
   "AllowedContentTypes": [],
   "PassedFiles": [],
   "Disable": {
