--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,16 +3,25 @@ name: Release
 
 on:
     push:
+        branches:
+            - "[0-9]+.[0-9]+"
         tags:
             - "[0-9]+.[0-9]+.[0-9]+"
     workflow_dispatch:
 
 jobs:
+    tests:
+        uses: ./.github/workflows/unit-tests.yaml
+
     build:
+        needs: tests
+
+        name: Create Release
         uses: llaville/.github/.github/workflows/release.yml@master
         with:
             repository: ${{ github.repository }}
             php-version: "8.0"
             box-output: bin/umlwriter.phar
             release-draft: true
-            release-prerelease: true
+            release-prerelease: ${{ github.ref_type == 'branch' }}
+            legacy: false
