use the new toHighlight manifest builder (see https://github.com/llaville/box-manifest/releases/tag/2.1.0)

--- a/box.json.dist
+++ b/box.json.dist
@@ -2,5 +2,5 @@
     "alias": "umlwriter.phar",
     "directories": ["bin", "src", "vendor"],
     "compression": "GZ",
-    "metadata": "Bartlett\\BoxManifest\\Composer\\ManifestFactory::toText"
+    "metadata": "Bartlett\\BoxManifest\\Composer\\ManifestFactory::toHighlight"
 }
