--- a/.mega-linter.yml
+++ b/.mega-linter.yml
@@ -5,6 +5,7 @@ EXCLUDED_DIRECTORIES: [".git", ".changes"]
 IGNORE_GITIGNORED_FILES: true
 ENABLE:
     - ACTION
+    - DOCKERFILE
     - EDITORCONFIG
     - MARKDOWN
     - PHP
@@ -15,6 +16,7 @@ DISABLE_LINTERS:
     - PHP_BUILTIN
     - PHP_PSALM
     - YAML_V8R
+DOCKERFILE_HADOLINT_ARGUMENTS: "-t error"
 EDITORCONFIG_EDITORCONFIG_CHECKER_CLI_LINT_MODE: project
 JSON_PRETTIER_FILTER_REGEX_EXCLUDE: "(composer.json)"
 MARKDOWN_MARKDOWNLINT_CONFIG_FILE: ".markdown-lint.json"
