--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -5,7 +5,7 @@ on:
     push:
         branches:
             - master
-            - 3.x
+            - "3.4"
         paths:
             - docs/**
     pull_request:
@@ -13,9 +13,10 @@ on:
 
 jobs:
     deploy:
-        uses: llaville/.github/.github/workflows/gh-pages.yml@master
+        uses: llaville/.github/.github/workflows/gh-pages.yml@uml
         with:
-            php-version: "8.0"
-            destination-dir: 3.x
+            php-version: "8.1"
+            destination-dir: 3.4
             hook-script: "resources/gh-pages-hook.sh"
             force-orphan: false
+            graph-uml: true
