active development of new major version 4.0 drop support to PHP 8.0

--- a/.gitignore
+++ b/.gitignore
@@ -2,17 +2,19 @@
 # CUSTOM
 ######################################
 
+site/
+docs/assets/images/
+
 ###### Composer dependencies ######
 vendor/
 
 ###### PHPLint ######
-.phplint-cache
+.phplint.cache/
 
 ###### PHPUnit ######
-.phpunit.result.cache
+.phpunit.cache/
 
 ###### Mega-Linter ######
-report/
 megalinter-reports/
 
 ######################################
