--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
         "cweagans/composer-patches": "^1.7",
         "graphp/graph": "1.x-dev#0adb04d as 1.0.0",
         "graphp/graphviz": "1.x-dev#686f747 as 1.0.0",
-        "psr/container": "^1.0 || ^2.0",
-        "roave/better-reflection": "^5.0 || ^6.0",
+        "psr/container": "^2.0",
+        "roave/better-reflection": "^6.0",
         "symfony/config": "^5.4 || ^6.0",
         "symfony/console": "^5.4 || ^6.0",
         "symfony/finder": "^5.4 || ^6.0",
